# inzetbooster

./: .editorconfig  .envrc  .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: test.yaml
src/inzetbooster/: auditlog.py  cli.py  inzetrooster.py  mailer.py  shifts.py  users.py
src/inzetbooster/templates/: bar-met-ervaring.html  bar.html  schoonmaak.html  shift-11703.html  shift-12079.html
tests/: manegeplan-export.xlsx  test_auditlog.py  test_inzetrooster.py  test_shifts.py  test_users.py
