[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inzetbooster"
readme = "README.md"
authors = [{ name = "Wichert Akkerman", email = "wichert@wiggy.net" }]
version = "1.0.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "html5lib",
    "beautifulsoup4",
    "httpx",
    "click",
    "structlog",
    "rich",
    "colorama",
    "Jinja2",
    "Babel",
    "mjml-python",
    "openpyxl",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Repository = "https://github.com/wichert/inzetbooster.git"
Issues = "https://github.com/wichert/inzetbooster/issues"

[project.scripts]
inzetbooster = "inzetbooster.cli:main"
